2002-02-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_date): Import just email.Utils.

	* Version.py (PLATFORM): Just use sys.platform instead of
	distutils.util.get_platform().
	
2002-02-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (seconds): Remove the exit(75) upon exception, as
	tmda-filter will now catch this.

	(writefile): Ditto.

	(append_to_file): Ditto.

	(maketext): Ditto.

	(substring_match): Removed.
	
2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_msgid): Change the idstring to 'TMDA', and reverse
	the order of randint and pid.

2002-02-01  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Modified 'tag_action' regular expression to
	allow arbitrary quoted strings.
	
	(FilterParser.__buildactions): Allow arbitrary headers with quoted
	string values.

	(_actionstr): Handle arbitrary headers/values appropriately.

2002-01-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.__buildactions): Lowercase the
	incoming action as file_to_list no longer does.

	* Util.py (file_to_list): Only lowercase the first field of a
	whitespace split line.

2002-01-31  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Add 'to/from-autocdb' and 'to/from-autodbm' to
	the 'most_sources' regular expression.

	(FilterParser.__search_file): New function to search a text file
	of email addresses with optional second field (action).

	(FilterParser.__search_cdb): New function to search a CDB database
	of email addresses with optional value (action).

	(FilterParser.firstmatch): Added support for 'to/from-autocdb'.
	Moved the guts of 'to/from-file' and 'to/from-cdb' to the two
	functions listed just above.

	* Util.py (build_cdb): New function to build a CDB file from a
	text file.

2002-01-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* HMAC.py (_strxor): Python2ism - string method ok to use now.
	